--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+requests==2.9.1
 rethinkdb==2.2.0.post5
 Werkzeug==0.11.4
-wheel==0.24.0
