--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 Flask==0.10.1
+Flask-Sockets==0.2.0
+gevent==1.1.0
+gevent-websocket==0.9.5
+greenlet==0.4.9
+gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
@@ -6,4 +11,3 @@ pytz==2015.7
 requests==2.9.1
 rethinkdb==2.2.0.post5
 Werkzeug==0.11.4
-wheel==0.24.0
